just minimal things

--- a/styles/style.css
+++ b/styles/style.css
@@ -34,8 +34,8 @@ body {
 
 #cat {
     position: absolute;
-    width: 50px;
-    height: 50px;
+    width: 36px;
+    height: 36px;
     background-color: transparent;
     background-image: url(../images/kity_cat.png);
 }
@@ -51,12 +51,18 @@ body {
 }
 
 .party {
-    background-color: rgb(58, 128, 0);
+    background-color: green;
+    width: 64px;
+    height: 64px;
+    /*   background-image: url(../images/party-popper.png); */
     animation: slide 3s linear infinite;
 }
 
 .obstacle {
-    background-color: rgb(8, 8, 8);
+    background-color: red;
+    width: 64px;
+    height: 64px;
+    /*background-image: url(../images/book.png); */
     animation: slide 3s linear infinite;
 }
 
